Fixes weird break in UL

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,8 +57,7 @@ body {
   float: right;
 }
 
-
-
-.hobbies ul{
+ li{
   list-style-type:none;
+
 }
